# hole_rl

./: Dockerfile  GEMINI.md  README.md  bot_requests.py  main.py  mkdocs.yml  pyproject.toml  requests.py
.github/workflows/: backend-docs-deploy.yml
buraco/: deck.py  game.py  models.py  websockets.py
buraco/bots/: bot_factory.py  deterministic_bot.py  random_bot.py
buraco/jax_env/: actions.py  converter.py  logic.py  state.py
docs/: game.md  index.md  models.md
site/: 404.html  index.html  objects.inv
site/game/: index.html
site/main/: index.html
site/models/: index.html
site/search/: search_index.json
tests/: test_api_bot_game.py  test_bot_gameplay.py  test_bots.py  test_deck.py  test_game.py  test_jax_env.py  test_main.py  test_models.py  test_websockets.py
